--- a/report/quantization/qllm_paper.tex
+++ b/report/quantization/qllm_paper.tex
@@ -111,6 +111,7 @@ The deployment of Large Language Models (LLMs) on resource-constrained edge hard
 
 \input{sections/methodology}
 
+\newpage
 \input{sections/results}
 
 % \input{sections/discussion}
